# react-native-webworker

./: .clang-format  .gitignore  CONTRIBUTING.md  README.md  Webworker.podspec  eslint.config.mjs  package.json  tsconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
android/: build.gradle  gradle.properties
android/src/main/jni/: CMakeLists.txt  WebWorkerJNI.cpp  WebWorkerRuntime.h
cpp/: Polyfills.h  TaskQueue.cpp  TaskQueue.h  WebWorkerCore.cpp  WebWorkerCore.h
cpp/StructuredClone/: StructuredCloneError.h  StructuredCloneReader.cpp  StructuredCloneReader.h  StructuredCloneTypes.h  StructuredCloneWriter.cpp  StructuredCloneWriter.h
cpp/networking/: FetchTypes.h  ResponseHostObject.h
docs/: NETWORKING.md  POLYFILLS.md
example/: app.json  package.json  rn-harness.config.mjs
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/WebworkerExample/: AppDelegate.swift  Info.plist
example/ios/WebworkerExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
example/src/__tests__/: echoWorkerScript.ts  eventloop.harness.ts  networking.harness.ts  polyfills.harness.ts  sanity.harness.ts  structuredclone.harness.ts  webworker.harness.ts
ios/: WebWorkerRuntime.h  WebWorkerRuntime.mm  Webworker.h  Webworker.mm
scripts/: clang-format.sh  js-format.sh  kotlin-format.sh
src/: NativeWebworker.ts  StructuredCloneDecoder.ts  StructuredCloneEncoder.ts  index.tsx
src/__tests__/: index.test.tsx
website/: astro.config.mjs  package.json
(+17 files in other folders)
